listo vista principal y css

--- a/index.html
+++ b/index.html
@@ -10,17 +10,18 @@
     <!--viewport-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tía Tomate</title>
-    <!--google fonts old standard regular y bold, raleway bold y regular-->
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Old+Standard+TT:wght@400;700&family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <!--google fonts raleway bold, light, regular-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;700&display=swap" rel="stylesheet">
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <!--Nav-->
     <nav class="navbar">
-        <div class="div_logo">
-         <img class="img_logo" src="assets/img/logo_header.png" alt="logo tomate">
+        <div class="navbar_div_logo">
+         <img class="navbar_img_logo" src="assets/img/logo_header.png" alt="logo tomate">
         </div>
     </nav> 
 
@@ -66,7 +67,7 @@
         <button class="buy_button"> CLICK AQUÍ</button>
     </section>
     <footer class="footer">
-        <img class="footer_img" src="assets/img/logo_footer.png">
+        <img class="footer_img" src="assets/img/logo_footer.png" alt="logo tomate">
     </footer>
 </body>
 </html>
